# db-fastapi-project-2026-fbki

./: .env.example  .gitignore  Makefile  README.md  REPORT.md  hotel_db.dump  hotel_db.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
app/: config.py  database.py  main.py  payments.py
app/api/: dependencies.py
app/api/routes/: auth.py  bookings.py  guests.py  portal_admin.py  portal_manager.py  portal_staff.py  portal_tourist.py  rooms.py  staff.py
app/auth/: dependencies.py  flash.py  jwt.py
app/db/: migrate.py  seed.py  setup_passwords.py
app/models/: schemas.py
app/static/css/: portal.css
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
app/templates/booking/: create.html  list.html
app/templates/guests/: create.html  list.html
app/templates/layouts/: portal.html
app/templates/manager/: cleaning.html  dashboard.html
app/templates/portal/admin/: dashboard.html  users.html
app/templates/portal/manager/: dashboard.html  schedule.html
app/templates/rooms/: list.html
diagrams/: context.puml  erd.puml  sequence.puml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: api.rst  conf.py  diagrams.rst  hotel_utils.rst  index.rst  overview.rst
migrations/: 001_init.sql  002_seed.sql  003_roles_auth.sql  004_coordinates.sql  005_payment_status.sql  006_booking_status.sql  007_payment_id.sql  008_refund_requests.sql  009_refund_status.sql
tests/integration/: conftest.py  test_routes.py
tests/unit/: test_availability.py  test_loyalty.py  test_pricing.py
(+7 files in other folders)
