[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = "Hotel booking management system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
asyncpg = "^0.30.0"
pydantic = { extras = ["email"], version = "^2.9.0" }
pydantic-settings = "^2.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = ">=3.2.0,<4.0.0"
hotel-utils = { path = "packages/hotel_utils", develop = true }
yookassa = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
Sphinx = "^8.1.0"
sphinx-rtd-theme = "^3.0.0"
sphinxcontrib-httpdomain = "^1.8.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
